--- a/examinations/01/JS_01.md
+++ b/examinations/01/JS_01.md
@@ -29,7 +29,7 @@ What does the file `~/.ssh/authorized_keys` contain?
 When logged into one of the VMs, how can you connect to the
 other VM without a password?
 - För att logga med SSH krävs ett nyckelpar där den enhet man loggar in från har den privata nyckeln och enheten man loggar in på har den publika, för att kunna logga in från en VM till en annan krävs alltså att den VM man loggar in från har den privata delen av ett nyckelpar och den VM man loggar in på har den publika delen av ett nyckelpar.
-I mitt fall har båda VM:s samma publika nyckel medan den privata nyckeln ligger på min host. För att kunna logga in från vilken som helst av VM:arna till den andra behöver jag antingen skapa ett nytt nyckelpar och lägga både den privata och publika nyckeln på båda VM:s eller flytta över den redan skapade privata nyckeln (deploy_key) till båda VM:s.
+I mitt fall har båda VM:s samma publika nyckel medan den privata nyckeln ligger på min host. För att kunna logga in från vilken som helst av VM:arna till den andra behöver jag antingen skapa ett nytt nyckelpar och lägga både den privata och publika nyckeln på båda VM:s, ett nyckelpar per VM och lägga över respektive publik nyckel på de andra VM:en eller flytta över den redan skapade privata nyckeln (deploy_key) till båda VM:s.
 
 ### Hints:
 
