--- a/examinations/02/JS_02.md
+++ b/examinations/02/JS_02.md
@@ -2,13 +2,14 @@
 
 ## Create ansible.cfg
 
-~/JennyStormAutomatiseringDevOps24/ansible_lab
+`~/JennyStormAutomatiseringDevOps24/ansible_lab`
 
 ## QUESTION A
 
 What happens if you run `ansible-inventory --list` in the directory you created above?
 
 - Jag får information om vad som finns i mitt inventory, vilka grupper och hosts/IP-adresser (i en JSON-struktur). I mitt fall, mina två VM:s webserver och dbserver samt min host JennysBurk.
+
 Källa:
 https://docs.ansible.com/ansible/latest/cli/ansible-inventory.html
 
@@ -17,6 +18,7 @@ https://docs.ansible.com/ansible/latest/cli/ansible-inventory.html
 What happens if you run `ansible-inventory --graph` in the directory you created above?
 
 - Jag får ungefär samma information som ovan, grupper i mitt inventory och vilka IP-adresser/hosts som är kopplade till de grupperna. Men i en sorts trädstruktur istället för JSON.
+
 Källa:
 https://docs.ansible.com/ansible/latest/cli/ansible-inventory.html
 
@@ -25,6 +27,7 @@ https://docs.ansible.com/ansible/latest/cli/ansible-inventory.html
 What does the `ansible_connection=local` part mean?
 
 - Det betyder att Ansible inte ska använda SSH för att ansluta till hosten, utan köra kommandona direkt på den lokala maskinen. Eftersom jag sitter på hosten så behöver jag inte SSH, därför anger jag ansible_connection=local efter namnet på min host.
+
 Källa:
 https://docs.ansible.com/ansible/latest/inventory_guide/connection_details.html
 
@@ -35,5 +38,6 @@ https://docs.ansible.com/ansible/latest/inventory_guide/connection_details.html
 You should get a pager displaying all available configuration values. How does it differ from when you run the same command in your usual home directory?
 
 - För att jämföra körde jag först `ansible-config dump` men informationen var för massiv. Så jag lade till `--only-changed` för att endast få fram konfigurationer som ändrats från default och kan konstatera att i min hem-katalog är inget ändrat och i min ansible_lab-katalog finns min konfiguration-fil och information om den konfiguration jag skrivit där, ex. host_key_checking och interpreter_python.
+
 Källa:
 https://docs.ansible.com/ansible/latest/cli/ansible-config.html
