Till och med uppgift 7 klar

--- a/examinations/06/JS_06.md
+++ b/examinations/06/JS_06.md
@@ -8,7 +8,7 @@
 
 There are several ways to accomplish this, and there is no _best_ way to do this with what we've done so far. Is this a good way to handle these types of conditionals? What do you think? (Är det här ett bra sätt att villkora om en task ska köras eller inte?)
 
-- Spontant tänker jag att ja, det kan det nog vara, i alla fall om man har mindre playbooks som inte påverkar många servrar. Det påminner om bash exitkoder och pythons statuskoder. Men jag tänker också att om man har en playbook som påverkar väldigt många servrar och en av servrarna får en ändring, men inte resten, så vill man inte behöva exempelvis inte starta om alla servrarna för att en av dem fick en change.
+- Spontant tänker jag att ja, det kan det nog vara, i alla fall om man har mindre playbooks som inte påverkar många servrar. Det påminner om bashs exitkoder och pythons statuskoder. 
 
 # BONUS QUESTION
 
@@ -19,8 +19,4 @@ Let's say the goal is to avoid restarts as much as possible to minimize downtime
 Describe in simple terms what your preferred task flow would look like, not necessarily implemented in Ansible, but in general terms.
 
 - För det första tänker jag att man kanske inte ska ha playbooks med flera hundra tasks?
-
-host vars
-https://docs.ansible.com/ansible/latest/reference_appendices/special_variables.html
-
-sjukt grötigt
+- Jag har förstått att det finns något som heter handlers, som jag kommer lära mig mer om, om ett par övningar, men eftersom jag inte kan det än  skulle jag nog ha löst det med just registred variables. Jag hade registrerat olika variabler för varje task, sedan hade jag delat upp dem mellan vilka som endast krävde reload och de som krävde restart och haft en task conditioned för reload för de som haft en change på aktuella uppdateringar och en respektive task för restart. På så sätt hade endast de hosts som haft en chang som krävde restart fått en restart vilket minskat downtiden. 
