--- a/examinations/12/JS_12.md
+++ b/examinations/12/JS_12.md
@@ -2,4 +2,4 @@
 
 # QUESTION A
 `12-roles.yml`
-`ansible-playbook --check 12_site.yml --ask-vault-pass`
+`ansible-playbook 12_site.yml --ask-vault-pass`
