Påbörjat uppgift 16, absolut inte klar.

--- a/examinations/16/JS_16.md
+++ b/examinations/16/JS_16.md
@@ -26,10 +26,7 @@ Use Ansible facts, modules, and "safe" commands. Here is an example:
 
 Again, the playbook should make *no changes* to the servers, only report.
 
-Often, there are more elegant and practical ways to assert compliance. The example above is
-taken more or less verbatim from the CIS Security Benchmark suite, but it is often considered
-bad practice to run arbitrary commands through [ansible.builtin.command] or [ansible.builtin.shell]
-if you can avoid it.
+ The example above is taken more or less verbatim from the CIS Security Benchmark suite, but it is often considered bad practice to run arbitrary commands through [ansible.builtin.command] or [ansible.builtin.shell] if you can avoid it.
 
 In this case, you _can_ avoid it, by using the [ansible.builtin.package_facts](https://docs.ansible.com/ansible/latest/collections/ansible/builtin/package_facts_module.html).
 
