Vägs ände, klar med uppg. 1-14 samt 16-17

--- a/examinations/16/JS_16.md
+++ b/examinations/16/JS_16.md
@@ -1,61 +1,12 @@
 # Examination 16 - Security Compliance Check
 
-The ever-present IT security team were not content with just having us put firewall rules on our servers. They also want our servers to pass CIS certifications.
-
 # QUESTION A
 
-Implement _at least_ 10 of the checks in the [CIS Security Benchmark](https://www.cisecurity.org/benchmark/almalinuxos_linux) for AlmaLinux 10 and run them on the virtual machines.
-
-These checks should be run by a playbook called `16-compliance-check.yml`.
-
-*Important*: The playbook should only _check_ or _assert_ the compliance status, not perform any changes.
-
-Use Ansible facts, modules, and "safe" commands. Here is an example:
-
-    ---
-    - name: Security Compliance Checks
-      hosts: all
-      tasks:
-        - name: check for telnet-server
-          ansible.builtin.command:
-            cmd: rpm -q telnet-server
-            warn: false
-          register: result
-          changed_when: result.stdout != "package telnet-server is not installed"
-          failed_when: result.changed
-
-Again, the playbook should make *no changes* to the servers, only report.
-
- The example above is taken more or less verbatim from the CIS Security Benchmark suite, but it is often considered bad practice to run arbitrary commands through [ansible.builtin.command] or [ansible.builtin.shell] if you can avoid it.
-
-In this case, you _can_ avoid it, by using the [ansible.builtin.package_facts](https://docs.ansible.com/ansible/latest/collections/ansible/builtin/package_facts_module.html).
-
-In conjunction with the [ansible.builtin.assert](https://docs.ansible.com/ansible/latest/collections/ansible/builtin/assert_module.html) module you have a toolset to accomplish the same thing, only more efficiently and in an Ansible-best-practice way.
-
-For instance:
-
-    ---
-    - name: Security Compliance Checks
-      hosts: all
-      tasks:
-        - name: Gather the package facts
-          ansible.builtin.package_facts:
-
-        - name: check for telnet-server
-          ansible.builtin.assert:
-            fail_msg: telnet-server package is installed
-            success_msg: telnet-server package is not installed
-            that: "'telnet-server' not in ansible_facts.packages"
-
-It is up to you to implement the solution you feel works best.
+- Jag började med att försöka skapa tasks för att klara `1.2.1.1 Ensure GPG keys are configured`. Detta tog en halv evighet och till slut insåg jag att jag att det stod `(Manual)` av en anledning. Jag har skapat tasks som kontrollerar att det finns GPG-nycklar i varje repo och att det finns minst en lokal GPG-nyckel, men steget när jag kom till steget att jämföra nycklarna gav jag upp eftersom jag kände att jag inte hade mer tid att lägga.
+- Istället tog jag emot tips av mina klasskamrater som har skrivit tasks för att kontrollera om paket och tjänster som ej bör finnas på systemen finns där eller ej. Målet var att göra samtliga `2.1`, men de två sista, `2.1.21` och `2.1.22` handlade inte om att se till att oönskade paket/tjänster inte fanns i systemet. 
+- Det jag har skrivit kontrollerar först om paketen finns och sedan om tjänsten körs. Den kontrollerar alltså om tjänsten körs även om jag redan konstaterat att paketet inte finns. Jag hade gärna satt mig ned och försökt loopa detta så att den endast hade kontrollerat om tjänsten körs ifall jag konstaterat att paketet fanns, men återigen känner jag att jag inte har tid.
+- Jag hade även gärna samlat resultatet i en mer lättöverskådlig fil än att allt skrivs ut i output, men c'est la vie.
 
 # BONUS QUESTION
-
-If you implement these tasks within one or more roles, you will gain enlightenment and additional karma.
-
-# Resources
-
-For inspiration and as an example of an advanced project using Ansible for this, see for instance
-https://github.com/ansible-lockdown/RHEL10-CIS. Do *NOT*, however, try to run this compliance check
-on your virtual (or physical) machines. It will likely have unintended consequences, and may render
-your operating system and/or virtual machine unreachable.
+- Jag har lagt listan med paket/tjänster i /defaults/main.yml eftersom jag förstod det som att om de ligger som variabler där är det lättare att "ignorera" dem om man skriver en annan playbook för specifika servrar - till skillnad om de hade legat i /vars/main.yml.
+- Jag tänkte att det skulle vara snyggt om de låg i en egen fil under /defaults, eftersom det skulle vara enklare att redigera listan då (och kanske hämta en lista från ex. excel och konvertera till en .yml-fil), men jag fick inte det att fungera. Jag trodde det skulle gå med något liknande som `ansible.builtin.include_vars` fast för defaults, men jag hittade ingen lösning.
